<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Play4Share</string>
    <string name="incoming_url">Incoming URL:</string>
    <string name="incoming_url_content">Incoming URL should appear here!</string>
    <string name="video_url">Video URL:</string>
    <string name="primary_video_url">Primary video URL:</string>
    <string name="secondary_video_url">Secondary video URL:</string>
    <string name="secondary_videos_urls">Secondary videos URLs:</string>
    <string name="video_url_content">Video URL should appear here!</string>
    <string name="open_browser">Open in browser</string>
    <string name="play">Play</string>
    <string name="bug_report">Report bug</string>
    <string name="exit">Exit</string>
    <string name="action_settings">Settings</string>
    <string name="ok_toast">Video URL found! Press the \"%1$s\" button to view the video.</string>
    <string name="error_toast">Something bad happened! Please, report the bug by pressing the \"%1$s\" button.</string>
    <string name="not_found">Not Found!</string>
    <string name="searching">Please wait! Searching...</string>
    <string name="email_chooser_title">Email bug report...</string>

</resources>
