<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context="tsapalos.bill.play4share.YoutubeExtractorActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/incoming_url_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/incoming_url"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/incoming_url_content_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/incoming_url_title_textView"
            android:text="@string/incoming_url_content" />

        <Button
            android:id="@+id/open_browser_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/incoming_url_content_textview"
            android:layout_marginTop="@dimen/small_margin"
            android:enabled="false"
            android:textColor="@drawable/custom_txt_genoa"
            android:onClick="browse"
            android:text="@string/open_browser" />

        <TextView
            android:id="@+id/video_url_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/open_browser_button"
            android:layout_marginTop="@dimen/big_margin"
            android:text="@string/video_url"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/video_url_content_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/video_url_title_textview"
            android:text="@string/video_url_content" />

        <Button
            android:id="@+id/primary_play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/video_url_content_textview"
            android:layout_marginTop="@dimen/small_margin"
            android:enabled="false"
            android:textColor="@drawable/custom_txt_genoa"
            android:onClick="play"
            android:text="@string/play" />

        <LinearLayout
            android:id="@+id/internal_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:layout_marginTop="@dimen/big_margin"
            android:layout_below="@+id/primary_play_button">
        </LinearLayout>

        <Button
            android:id="@+id/exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/internal_layout"
            android:layout_marginTop="@dimen/big_margin"
            android:onClick="exit"
            android:text="@string/exit" />

        <Button
            android:id="@+id/bug_report_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/exit_button"
            android:layout_alignParentRight="true"
            android:onClick="reportBug"
            android:text="@string/bug_report" />
    </RelativeLayout>

</ScrollView>